<resources>
    <string name="app_name">ZenTime</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_settings">Settings</string>

    <string name="pref_time_options_label">Time Options</string>
    <string name="pref_time_options_message">Choose how many time intervals you would like to see in the priority mode volume panel</string>

    <string-array name="pref_time_options">
        <item>Default</item>
        <item>More</item>
        <item>Custom</item>
    </string-array>

    <string-array name="pref_time_options_values">
        <item>default</item>
        <item>more</item>
        <item>custom</item>
    </string-array>

    <string name="pref_custom_times_label">Custom Times</string>
    <string name="pref_custom_times_message">Enter your desired values as a comma-separated list (in minutes)\nex: 5,10,15,30,60,120\n\n\'60\' must appear in this list and will be the first option you see when you open the panel</string>

    <string name="pref_soft_reboot_label">Reboot to update changes</string>
    <string name="pref_soft_reboot_message">Reboot after making your changes to reload the System UI with your new settings</string>

    <!-- About section -->
    <string name="pref_about">About</string>

    <string name="pref_about_title">ZenTime v%1$s</string>
    <string name="pref_about_summary">ZenTime is released under the GPLv3 license.</string>
</resources>
